arch/arm64: import OEM changes
Signed-off-by: Anand Shekhawat <anandsingh215@yahoo.com>

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -2319,3 +2319,10 @@ source "drivers/acpi/Kconfig"
 source "arch/arm64/kvm/Kconfig"
 
 source "arch/arm64/gunyah/Kconfig"
+
+config FACTORY_BUILD
+	bool "distiguish factory version from dev version"
+	default n
+	help
+	  This macro will be defined when build factory version. It is used to
+	  distinguish factory and dev codes in kernel.
