--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -538,4 +538,5 @@ source "drivers/misc/habanalabs/Kconfig"
 source "drivers/misc/uacce/Kconfig"
 source "drivers/misc/pvpanic/Kconfig"
 source "drivers/misc/mchp_pci1xxxx/Kconfig"
+source "drivers/misc/hwid/Kconfig"
 endmenu
