kernel: import rest of misc OEM changes
Signed-off-by: Anand Shekhawat <anandsingh215@yahoo.com>

--- a/.gitignore
+++ b/.gitignore
@@ -175,6 +175,8 @@ sphinx_*/
 # Rust analyzer configuration
 /rust-project.json
 
+# Xiaomi Add
+drivers/misc/hwid/
 # Android ABI build files
 abi_gki_protected_exports
 all_kmi_symbols
