--- a/build.targets
+++ b/build.targets
@@ -6,6 +6,12 @@ build.config.msm.kalama
 build.config.msm.pineapple.vm
 build.config.msm.kalama.vm
 build.config.msm.pineapple.allyes
+build.config.msm.shennong
+build.config.msm.manet
+build.config.msm.aurora
+build.config.msm.houji
+build.config.msm.peridot
+build.config.msm.chenfeng
 build.config.msm.blair
 build.config.msm.gen3auto
 build.config.msm.gen4auto
